Added the 1-grams, also modified the data pipelien (omitting tokenization and stemming)

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,6 @@ train_US.news.txt
 train_US.txt
 .RData
 .Rhistory
+Text-Prediction-Model---Data-Processing_cache
+Text-Prediction-Model---Data-Processing_files
+capstonpreject_backup
